# opengl

./: .gitignore  CMakeLists.txt  README.md
include/glad/: glad.h
include/predefined/: shapes.cpp  shapes.h
include/uniforms/: uniforms.h
models/: AllHouse.mtl  haus.fbx
models/rat/: obj.mtl
models/terrain/: mpmap2.mtl
shaders/: cubeMap.frag  cubeMap.geom  cubeMap.vert  default.frag  default.vert  flat.frag  flat.vert  gourand.frag  gourand.vert  light.vert  phong.frag  phong.vert  shadows.vert
src/: CMakeLists.txt  glad.c  main.cpp
src/glObjects/: CMakeLists.txt
src/glObjects/include/: EBO.h  VAO.h  VBO.h  camera.h  glObject.h  shader.h  texture.h  textureSet.h  vertex.h  window.h
src/glObjects/src/: EBO.cpp  VAO.cpp  VBO.cpp  camera.cpp  shader.cpp  texture.cpp  textureSet.cpp  window.cpp
src/graphics/: CMakeLists.txt
src/graphics/include/: drawable.h  light.h  lightManager.h  mesh.h  model.h  worldObject.h
src/graphics/src/: light.cpp  lightManager.cpp  mesh.cpp  model.cpp  worldObject.cpp
src/shaders/: default.frag  default.vert
src/static/: shapes.h  uniforms.h
src/utility/: CMakeLists.txt
src/utility/include/: VAOFactory.h  light.h  model.h  shaderFactory.h  worldObject.h
src/utility/src/: VAOFactory.cpp  light.cpp  model.cpp  shaderFactory.cpp  worldObject.cpp
